--- a/source/pages/mycoupon/mycoupon.wxml
+++ b/source/pages/mycoupon/mycoupon.wxml
@@ -8,7 +8,11 @@
         </view>
     </view>
 
+
     <view class="flex-row flex-column" style="display: {{flag == 'A' ? 'block' :'none'}}; min-height: 90vh; position: relative;">
+        <!-- <view wx:for="{{coupon}}"  wx:if="{{item.usesstatus = 'A'}}" class="flex-row kongbaitips"  style="min-height: 90vh;">
+                <image src="{{uploadpath}}resource/{{res.kongbaiyetubiao}}"></image>
+        </view> -->
         <view style="margin-bottom: 92rpx; ">
             <view class="cards" wx:for="{{coupon}}" wx:if="{{item.usesstatus == 'A'}}" wx:key="item">
                 <view style="margin: 30rpx;">
@@ -73,8 +77,6 @@
 
                     </view>
                 </view>
-
-
             </view>
 
         </view>
@@ -83,30 +85,36 @@
     <view class="flex-row flex-column" style="display: {{flag == 'C' ? 'block' :'none'}}; min-height: 90vh; position: relative;">
         <view style="margin-bottom: 92rpx; ">
             <view class="cards" wx:for="{{coupon}}" wx:if="{{item.usesstatus == 'C'}}" wx:key="item">
-                <view style="margin: 30rpx;">
-                    <view class="flex-row">
-                        <view class="flex-row flex-column flex-center" style="width: 33.33%; margin-bottom: 24rpx;">
-                            <view wx:if="{{item.type == 'A'}}" class="flex-row" style="line-height: 80rpx;">
-                                <view class="f-28 txt-99">￥</view>
-                                <view class="f-56 txt-99">{{item.amount}}</view>
+                <view class="flex-row kongbaitips" wx:if="{{(coupon.length<=0 && item.usesstatus == 'C')}}" style="min-height: 90vh;">
+                    <image src="{{uploadpath}}resource/{{res.kongbaiyetubiao}}"></image>
+                </view>
+                <view wx:else>
+                    <view style="margin: 30rpx;">
+                        <view class="flex-row">
+                            <view class="flex-row flex-column flex-center" style="width: 33.33%; margin-bottom: 24rpx;">
+                                <view wx:if="{{item.type == 'A'}}" class="flex-row" style="line-height: 80rpx;">
+                                    <view class="f-28 txt-99">￥</view>
+                                    <view class="f-56 txt-99">{{item.amount}}</view>
+                                </view>
+                                <view wx:if="{{item.type == 'B'}}" class="flex-row" style="line-height: 80rpx;">
+                                    <view class="f-56 txt-99">{{item.zhekou/10}}</view>
+                                    <view class="f-28 txt-99">折</view>
+                                </view>
+                                <view class="f-24" style="color: #999; line-height: 34rpx; height: 34rpx;">满{{item.manmoney}}元可用</view>
                             </view>
-                            <view wx:if="{{item.type == 'B'}}" class="flex-row" style="line-height: 80rpx;">
-                                <view class="f-56 txt-99">{{item.zhekou/10}}</view>
-                                <view class="f-28 txt-99">折</view>
+                            <view class="flex-1" style="margin-left: 40rpx;">
+                                <view class="f-32" style="font-weight: 500; color: #999;">{{item.name}}</view>
+                                <view class="f-24" style="color: #999999;line-height: 34px;">有效期至{{item.end_time}}</view>
                             </view>
-                            <view class="f-24" style="color: #999; line-height: 34rpx; height: 34rpx;">满{{item.manmoney}}元可用</view>
                         </view>
-                        <view class="flex-1" style="margin-left: 40rpx;">
-                            <view class="f-32" style="font-weight: 500; color: #999;">{{item.name}}</view>
-                            <view class="f-24" style="color: #999999;line-height: 34px;">有效期至{{item.end_time}}</view>
+
+                        <view class="flex-row flex-center" style="border-top: 2rpx solid #E1E3E699;">
+                            <view class="f-24" style="line-height: 34px;color: #999999;">备注：{{item.shiduan}}</view>
+                            <view class="flex-1"></view>
+
                         </view>
                     </view>
 
-                    <view class="flex-row flex-center" style="border-top: 2rpx solid #E1E3E699;">
-                        <view class="f-24" style="line-height: 34px;color: #999999;">备注：{{item.shiduan}}</view>
-                        <view class="flex-1"></view>
-
-                    </view>
                 </view>
 
 
