--- a/source/app.wxss
+++ b/source/app.wxss
@@ -1018,6 +1018,9 @@ button[disabled][type=primary] {
   background-color: #f3f6f7;
   min-height: 100vh;
 }
+.contentbox-700{
+  width: 700rpx;
+}
 
 .kongbaitips {
   justify-content: center;
