--- a/source/pages/conponuse/conponuse.wxml
+++ b/source/pages/conponuse/conponuse.wxml
@@ -1,12 +1,13 @@
 <!--pages/conponuse/conponuse.wxml-->
-
-<view class="flex-row flex-column" style="background-color: rgba(243, 246, 247, 1); min-height: 100vh;">
-
-    <view wx:for="{{couponlist}}" wx:if="{{item.usesstatus == 'A'}}" bindtap="chosedz" id="{{item.id}}" style="background-color: rgba(255, 255, 255, 1); width: 700rpx; height: 248rpx;border-radius: 32rpx;margin-top: 44rpx;">
-        <view style="margin: 30rpx;">
+<view class="flex-row flex-column firstbox">
+    <view class="listbox" wx:for="{{couponlist}}" id="{{item.id}}" bindtap="choseconpon">
+        <view>
             <view class="flex-row">
-                <!-- <image  bindtap="chosedz" id='{{item.id}}' src="{{uploadpath}}resource/{{res.chose2}}" class="icon30"></image> -->
-                <view class="flex-row flex-column flex-center" style="width: 33.33%; margin-bottom: 24rpx;"> 
+                <view class="seleceimg" >
+                    <image wx:if="{{item.id==couponid}}" src="{{uploadpath}}resource/{{item.id==couponid?res.chose2:res.chose}}" class="icon30"></image>
+                    <image wx:else src="{{uploadpath}}resource/{{res.chose}}" class="icon30"></image>
+                </view>
+                <view class="flex-row flex-column flex-center" style="width: 33.33%; margin-bottom: 24rpx;">
                     <view wx:if="{{item.type == 'A'}}" class="flex-row" style="line-height: 80rpx;">
                         <view class="f-28 fontcolor">￥</view>
                         <view class="f-56 fontcolor">{{item.amount}}</view>
@@ -18,12 +19,12 @@
                     <view class="f-24" style="color: #999; line-height: 34rpx; height: 34rpx;">满{{item.manmoney}}元可用</view>
                 </view>
                 <view class="flex-1" style="margin-left: 40rpx;">
-                    <view class="f-32" style="font-weight: 500; color: #333333;;">{{item.name}}</view>
-                    <view class="f-24" style="color: #999999;line-height: 34px;">有效期至{{item.end_time}}</view>
+                    <view class="f-32" style="font-weight: 500; color: #333333; line-height: 80rpx;">{{item.name}}</view>
+                    <view class="f-24" style="color: #999999;line-height: 34rpx;">有效期至{{item.end_time}}</view>
                 </view>
             </view>
             <view class="flex-row flex-center" style="border-top: 2rpx solid #E1E3E699;">
-                <view class="f-24" style="line-height: 34px;color: #999999;">使用时段:{{item.shiduan}}</view>
+                <view class="f-24" style="line-height: 34px;color: #999999;">备注:{{item.shiduan}}</view>
                 <view class="flex-1"></view>
             </view>
         </view>
