--- a/source/pages/conponuse/conponuse.wxss
+++ b/source/pages/conponuse/conponuse.wxss
@@ -1,6 +1,23 @@
 /* pages/conponuse/conponuse.wxss */
+.firstbox {
+    background-color: rgba(243, 246, 247, 1);
+    min-height: 100vh;
+}
+
+.listbox {
+    background-color: rgba(255, 255, 255, 1);
+    width: 700rpx;
+    height: 278rpx;
+    border-radius: 32rpx;
+    margin-top: 44rpx;
+    box-sizing: border-box;
+    padding: 30rpx;
+}
+.seleceimg{
+    height: 114rpx;
+    line-height: 114rpx;
+}
 .icon30 {
     width: 30rpx;
     height: 30rpx;
-    margin-right: 36rpx;
 }
