--- a/source/pages/ordersubmit/ordersubmit.wxml
+++ b/source/pages/ordersubmit/ordersubmit.wxml
@@ -4,15 +4,20 @@
 </view>
 
 <view>
+<!-- 商家配送 -->
     <view wx:if="{{sendtype=='A'}}">
+    <!-- 没有选地址的话，转跳到地址列表 -->
         <view wx:if="{{address_id==0}}" class="flex-row flex-center dizhibox" bindtap="navigateto" id='/pages/addresslist/addresslist?chosetype=A&id={{address_id}}'>
+            <!-- 展示的内容 -->
             <image src="{{uploadpath}}resource/{{res.dizhi}}" class="dizhi"></image>
             <view class="f-36 txt-33">点击选择地址</view>
             <view class="flex-1"></view>
             <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
         </view>
+        <!-- 否则，点击也转跳到地址列表 -->
         <view wx:else class="flex-row flex-center dizhibox" bindtap="navigateto" id='/pages/addresslist/addresslist?chosetype=A&id={{address_id}}'>
             <view class="flex-1 flex-row">
+            <!-- 展示内容 -->
                 <image src="{{uploadpath}}resource/{{res.dizhi}}" class="dizhi"></image>
                 <view>
                     <view class="f-36 txt-33" style="font-weight: 500;">{{addressinfo.address}}</view>
@@ -27,6 +32,8 @@
         </view>
 
     </view>
+
+    <!-- 自提 -->
     <view wx:else>
         <view wx:if="{{store_id==0}}" class="flex-row flex-center dizhibox" bindtap="navigateto" id='/pages/store/store?goodsid={{info.id}}&id={{store_id}}'>
             <image src="{{uploadpath}}resource/{{res.dizhi}}" class="dizhi"></image>
@@ -85,11 +92,14 @@
 
         </view>
         <view class="height-50"></view>
-        <view class="flex-row flex-center" bindtap="navigateto" id="/pages/conponuse/conponuse?goodsid={{info.id}}&&totalamount={{totalamount}}">
+        <view class="flex-row flex-center" bindtap="navigateto" id="/pages/conponuse/conponuse?goodsid={{info.id}}&totalamount={{totalamount}}&couponid={{couponid}}">
             <view class="h5 txt-33">优惠券</view>
             <view class="cbox" style="background-image:url({{uploadpath}}resource/{{res.couponbgicon}})">{{keyongcoupon}}张可用</view>
             <view class="flex-1"></view>
-            <view wx:if="{{couponid > 0}}">-{{couponprice}}</view>
+            <view wx:if="{{couponid > 0}}"  class="flex-row flex-center">
+                <view >-{{couponprice}}</view>
+                <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
+            </view>
             <view wx:else class="flex-row flex-center">
                 <view class="h5" style="color:#888888;">未使用</view>
                 <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
@@ -100,7 +110,7 @@
     <view class="height-70"></view>
     <view class="total">
         <view class="flex-row flex-center">
-            <view class="h5 txt-33">商品总金额</view>
+            <view class="h5 txt-33">商品金额</view>
             <view class="flex-1"></view>
             <view class="h5" style="color:#888888;">¥{{totalamount}}</view>
         </view>
