--- a/source/pages/store/store.wxml
+++ b/source/pages/store/store.wxml
@@ -1,10 +1,71 @@
-<view>
-    <view class="txt-66 h5 margin-topmd">常用门店</view>
+<view class="bgf3f6f7 flex-row flex-column">
+    <view class="contentbox-700">
+        <view class="txt-66 h5 textbox">常用门店</view>
+        <view class="listbox" wx:for="{{usestore}}" wx:key='item' style="background-image: url({{uploadpath}}resource/{{res.biaoqian}});">
+            <view class="flex-row">
+
+                <view class="leftbox"  bindtap="chosedz" id="{{item.id}}">
+                    <view class="flex-1 f-36">{{item.name}}</view>
+                    <view class="flex-row flex-center timebox">
+                        <image src="{{uploadpath}}resource/{{res.time}}" class="icon-10 margin-right-10"></image>
+                        <view class="h6 txt-66">{{item.opentime}}</view>
+                    </view>
+                    <view>
+                        <view class="flex-1 flex-row margin-top-8">
+                            <image src="{{uploadpath}}resource/{{res.didian}}" class="icon-10 margin-right-10 dzimg"></image>
+                            <view class="h6 txt-66">{{item.address}}</view>
+                        </view>
+                    </view>
+                </view>
+
+                <view class="rightbox">
+                    <view class="f-24 txt-99 distance">距离{{item.miletext}}</view>
+                    <view class="flex-row">
+                        <image class="sizeimg" bindtap="phonecall" data-phone="{{item.mobile}}" src="{{uploadpath}}resource/{{res.phone}}"></image>
+                        <view style="width: 24rpx;"></view>
+                        <image class="sizeimg" bindtap="openMap" id="{{item.address}}" src="{{uploadpath}}resource/{{res.map}}"></image>
+                    </view>
+
+                </view>
+            </view>
+        </view>
+        <view class="txt-66 h5 textbox">其他门店</view>
+        <view class="listbox li" wx:for="{{list}}" wx:key='item' style="background-color: #fff;">
+            <view class="flex-row">
+                <view class="leftbox" bindtap="chosedz" id="{{item.id}}">
+                    <view class="flex-1 f-36">{{item.name}}</view>
+                    <view class="flex-row flex-center timebox">
+                        <image src="{{uploadpath}}resource/{{res.time}}" class="icon-10 margin-right-10"></image>
+                        <view class="h6 txt-66">{{item.opentime}}</view>
+                    </view>
+                    <view>
+                        <view class="flex-1 flex-row margin-top-8">
+                            <image src="{{uploadpath}}resource/{{res.didian}}" class="icon-10 margin-right-10 dzimg"></image>
+                            <view class="h6 txt-66">{{item.address}}</view>
+                        </view>
+                    </view>
+                </view>
+
+                <view class="rightbox">
+                    <view class="f-24 txt-99 distance">距离{{item.miletext}}</view>
+                    <view class="flex-row">
+                        <image class="sizeimg" bindtap="phonecall" data-phone="{{item.mobile}}" src="{{uploadpath}}resource/{{res.phone}}"></image>
+                        <view style="width: 24rpx;"></view>
+                        <image class="sizeimg" bindtap="openMap" id="{{item.address}}" src="{{uploadpath}}resource/{{res.map}}"></image>
+                    </view>
+
+                </view>
+            </view>
+        </view>
+    </view>
 </view>
 
-<view >
-    <view wx:for="{{usestore}}" wx:key='k' class="box" bindtap="chosedz" id="{{item.id}}">
-        <image src="{{uploadpath}}resource/{{res.biaoqian}}" class="biaoqian"></image>
+
+
+
+<view>
+    <view class="flex-row" style="background-image: {{uploadpath}}resource/{{res.biaoqian}};" wx:for="{{usestore}}" wx:key='k' class="box" bindtap="chosedz" id="{{item.id}}">
+        <!-- <image src="{{uploadpath}}resource/{{res.biaoqian}}" class="biaoqian"></image> -->
         <view class="flex-row flex-center">
             <view class="flex-1 f-36">{{item.name}}</view>
             <view class="h5 txt-66">{{item.miletext}}</view>
@@ -28,7 +89,7 @@
 </view>
 
 <view>
-    <view wx:for="{{list}}" wx:key='k' class="box" bindtap="chosedz" id="{{item.id}}">
+    <view wx:for="{{list}}" wx:key='k' class="box" >
         <view class="flex-row flex-center">
             <view class="flex-1 f-36">{{item.name}}</view>
             <view class="h5 txt-66">{{item.miletext}}</view>
