--- a/source/pages/buygiftcardsinfo/buygiftcardsinfo.wxml
+++ b/source/pages/buygiftcardsinfo/buygiftcardsinfo.wxml
@@ -4,18 +4,18 @@
     <view style="width: 702rpx; position: relative; min-height: 100vh;">
         <view style="margin-bottom: 200rpx;">
             <scaroll-view scroll-x="true" class="flex-row flex-column" style="height: 590rpx; width: 100%; white-space: nowrap; margin-top: 30rpx;">
-                <image style="width: 700rpx; height: 420rpx; border-radius: 32rpx; margin-bottom: 30rpx;" src="{{uploadpath}}giftcardinfo/{{cardbanner[coverid].image}}" alt=""></image>
+                <image style="width: 700rpx; height: 420rpx; border-radius: 32rpx; margin-bottom: 30rpx;" src="{{uploadpath}}giftcardinfo/{{cardbanner[coverindex].image}}" alt=""></image>
                 <view style="display: inline-block; width: 100%;  height: 150rpx;">
-                    <image wx:for="{{cardbanner}}" wx:key="item" bindtap="selectcover" id="{{item.id}}" class="img {{coverid+1==item.id?'border_green':''}}" src="{{uploadpath}}giftcardinfo/{{item.image}}"></image>
+                    <image wx:for="{{cardbanner}}" wx:key="item" wx:for-index="index"  bindtap="selectcover" data-coverindex="{{index}}" id="{{item.id}}" class="img {{coverindex==index?'border_green':''}}" src="{{uploadpath}}giftcardinfo/{{item.image}}"></image>
+                    
                     <!-- <image style="width: 36rpx;height: 36rpx;" src="{{uploadpath}}resource/{{res.coverselect}}"></image> -->
                 </view>
             </scaroll-view>
-
+            
             <view class="f-28" style="margin-top: 40rpx; margin-bottom: 16rpx;">选择面额：</view>
-
             <scaroll-view scroll-x="true" class="flex-row" style="height: 140rpx; width: 100%; white-space: nowrap;">
                 <view style="height: 150rpx; display: inline-block; width: 100%;">
-                    <view wx:for="{{cardprice}}" wx:key="item" class="price {{priceid==item.id?'border_green':''}}" bindtap="selectprice" id="{{item.id}}">
+                    <view wx:for="{{cardprice}}" wx:key="item" wx:for-index="index" id="{{item.id}}" class="price {{priceindex==index?'border_green':''}}" bindtap="selectprice" data-priceindex="{{index}}">
                         <text class="f-20" style="font-size: 20rpx;">￥</text>
                         <text class="f-40">{{item.cardprice}}</text>
                     </view>
