--- a/source/app.wxss
+++ b/source/app.wxss
@@ -1025,5 +1025,10 @@ button[disabled][type=primary] {
 .kongbaitips {
   justify-content: center;
   align-items: center;
+}
+.min-height-90{
+  min-height: 90vh;
+}
+.min-height-100{
   min-height: 100vh;
 }
