--- a/source/pages/giftcardshiyong/giftcardshiyong.wxml
+++ b/source/pages/giftcardshiyong/giftcardshiyong.wxml
@@ -1,18 +1,20 @@
 <!--pages/giftcardshiyong/giftcardshiyong.wxml-->
-<view class="flex-row flex-column" >
-        <view style="margin-bottom: 92rpx; ">
-            <view class="flex-row cards" wx:for="{{cardlist}}" wx:key="item" bindtap="chosedz"  id='{{item.id}}'
-             wx:if="{{item.isuse != 'C'  && item.yue != 0}}">
-                <image class="cardsimg" src="{{uploadpath}}giftcardinfo/{{item .cover}}"></image>
-                <view class="contentbox flex-1">
-                    <view wx:if="{{item.cardtype == 'B'}}" class="f-32" style="font-weight: 700;">面值￥{{item.giftcardprice_id}}</view>
-                    <view wx:if="{{item.cardtype == 'A'}}" class="f-32" style="font-weight: 700;">面值￥{{item.giftcardprice_id_name}}</view>
-                    <view class="flex-row" style="justify-content: space-between; margin-top: 8rpx;">
-                        <view class="f-24">余额：{{item.yue}}</view>
-                        <view class="f-24">{{item.isuse_name}}</view>
-                    </view>
-                    <view class="f-20 explain">有效期三年</view>
+<view class="flex-row flex-column">
+    <view class="flex-row kongbaitips min-height-100" wx:if="{{cardlist.length<=0}}">
+        <image src="{{uploadpath}}resource/{{res.kongbaiyetubiao}}"></image>
+    </view>
+    <view wx:else style="margin-bottom: 92rpx; ">
+        <view class="flex-row cards" wx:for="{{cardlist}}" wx:key="item" bindtap="chosedz" id='{{item.id}}' wx:if="{{item.isuse != 'C'  && item.yue != 0}}">
+            <image class="cardsimg" src="{{uploadpath}}giftcardinfo/{{item .cover}}"></image>
+            <view class="contentbox flex-1">
+                <view wx:if="{{item.cardtype == 'B'}}" class="f-32" style="font-weight: 700;">面值￥{{item.giftcardprice_id}}</view>
+                <view wx:if="{{item.cardtype == 'A'}}" class="f-32" style="font-weight: 700;">面值￥{{item.giftcardprice_id_name}}</view>
+                <view class="flex-row" style="justify-content: space-between; margin-top: 8rpx;">
+                    <view class="f-24">余额：{{item.yue}}</view>
+                    <view class="f-24">{{item.isuse_name}}</view>
                 </view>
+                <view class="f-20 explain">有效期三年</view>
             </view>
         </view>
     </view>
+</view>
