--- a/source/pages/activity/activity.wxss
+++ b/source/pages/activity/activity.wxss
@@ -1,5 +1,5 @@
 /* pages/activity/activity.wxss */
-.activeliat{
+.activelist{
     width: 710rpx;
     margin-left: 20rpx;
     margin-bottom: 32rpx;
@@ -19,11 +19,13 @@
     font-size: 32rpx;
 }
 .answer{
-    width: 90%;
-    height: 70rpx;
+    width: 100%; 
+    height: 112rpx;
+    /* width: 90%;
+    height: 70rpx; */
     border-bottom: 1px solid rgba(225, 227, 230, 0.6);
     font-size: 28rpx;
-    color: rgba(51, 51, 51, 1);
+    color: rgba(102, 102, 102, 1)
 }
 .btns {
     width: 100%rpx;
