--- a/source/pages/conponuse/conponuse.wxss
+++ b/source/pages/conponuse/conponuse.wxss
@@ -2,8 +2,16 @@
 .firstbox {
     background-color: rgba(243, 246, 247, 1);
     min-height: 100vh;
+    position: relative;
 }
-
+.list{
+    height: 85vh;
+}
+.list::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+    color: transparent;
+  }
 .listbox {
     background-color: rgba(255, 255, 255, 1);
     width: 700rpx;
@@ -21,3 +29,11 @@
     width: 30rpx;
     height: 30rpx;
 }
+
+.shiyong {
+    width: 678rpx;
+    height: 92rpx;
+    border-radius: 48rpx;
+    position: absolute;
+    bottom: 70rpx;
+  }
